# rust-english-parser

./: Cargo.toml  README.md  makefile  output.txt
src/: lib.rs  main.rs
test_files/: test1.txt  test2.txt
tests/: tests.rs
