[package]
name = "english-language-parser"
version = "0.3.0"
authors = ["vadym-polishchuk"]
edition = "2021"
description = "Simple parser of English sentences created for KMA Rust course."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"
clap = { version = "4.4.8", features = ["cargo","derive"] }
thiserror = "1.0"